# peqes

./: .popper.yml  README.md
build-environment/: Dockerfile
evaluation/: .gitignore  config.json  index.js  package-lock.json  package.json  run-eval.sh
evaluation/experiments/: computation.R  computation.sh  latency.R  latency.sh
peqes-client/: .gitignore  Cargo.toml
peqes-client/src/: main.rs
peqes-runner/: Cargo.toml
peqes-runner/src/: attestation.rs  database.rs  main.rs
peqes-server/: .gitignore  Cargo.toml  Makefile
peqes-server/src/: attestation.rs  crypto.rs  database.rs  main.rs  studies.rs
peqes-webapp/: README.md  package-lock.json  package.json  vue.config.js
peqes-webapp/public/: index.html
peqes-webapp/src/: App.vue  main.js
peqes-webapp/src/components/: AlertsListComponent.vue  CreateStudyComponent.vue  ListStudiesComponent.vue  StudySurveyComponent.vue  ViewStudyComponent.vue
peqes-webapp/src/plugins/: crypto.js  router.js
peqes-webapp/src/views/: EthicsBoardView.vue  ParticipantView.vue  ResearcherView.vue
results/: computation-stats.csv  latency-stats.csv
results/computation/: results.csv
results/latency/baseline/: times.csv
results/latency/sgx/: times.csv
