[package]
name = "peqes-client"
version = "0.1.0"
authors = ["Dominik Meißner <dominik.meissner@uni-ulm.de>"]
edition = "2018"

[patch.crates-io]
ring = { git = "https://github.com/akash-fortanix/ring.git", rev = "5b5b3792fc409288039937ca422ebdd8426de8a8" }

[dependencies]
bincode = "1.2.1"
http = "0.2"
hyper = "0.13"
hyper-tls = "0.4"
hex = "0.4"
regex = "1.3.3"
base64 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1.0"
byteorder = "1.3.2"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
sgxs = "0.7.2"
sgx-isa = "0.3.1"
aes-gcm = "0.3.0"
rand = "0.7"
sgx-crypto = { git = "https://github.com/ndokmai/rust-sgx-remote-attestation.git", rev = "9a8c73947d223acb43bf62f7aa6dea2366b95266" }
ring = { git = "https://github.com/akash-fortanix/ring.git", rev = "5b5b3792fc409288039937ca422ebdd8426de8a8" }
untrusted = "0.6.2"
