[package]
name = "peqes-server"
version = "0.1.0"
authors = ["Dominik Meißner <dominik.meissner@uni-ulm.de>"]
edition = "2018"

[package.metadata.fortanix-sgx]
runner="../peqes-runner/target/debug/peqes-runner"

[patch.crates-io]
ring = { git = "https://github.com/akash-fortanix/ring.git", rev = "5b5b3792fc409288039937ca422ebdd8426de8a8" }

[dependencies]
tiny_http = "0.6.2"
ring = { git = "https://github.com/akash-fortanix/ring.git", rev = "5b5b3792fc409288039937ca422ebdd8426de8a8" }
untrusted = "0.6.2"
aes-gcm = "0.3.0"
hex = "0.4.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = "1.0"
serde_json = "1.0"
base64 = "0.11.0"
http_router = { version = "0.1", default-features = false }
quickjs_rs = { git = "https://github.com/ech0-de/quickjs-rs.git", rev = "cf0b548c4a9dab2765965d73e7cb39831ad202a4" }
sgx-isa = { version = "0.3.1", features = ["sgxstd"] }
rand = "0.7"
bincode = "1.2.1"
byteorder = "1.3.2"
sgx-crypto = { git = "https://github.com/ndokmai/rust-sgx-remote-attestation.git", rev = "9a8c73947d223acb43bf62f7aa6dea2366b95266" }
